--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,7 +8,7 @@
     <title>Docker Compose</title>
 </head>
 <body>
-    <div class="titulo">
+    <div>
         <h1>DATOS</h1>
     </div>
     <div class="btn">
