--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -11,7 +11,7 @@
     <div>
         <h1>DATOS</h1>
     </div>
-    <div class="btn">
+    <div>
         <form action="/crear_datos" method="POST">
             <button type="submit">Crear registros</button>
         </form>
